--- a/content/themes/Uno-master/partials/social.hbs
+++ b/content/themes/Uno-master/partials/social.hbs
@@ -47,26 +47,33 @@ classes that you can use:
 <nav class="cover-navigation navigation--social">
   <ul class="navigation">
 
+  <!-- LinkedIn -->
+  <li class="navigation__item">
+    <a href="www.linkedin.com/pub/warren-ng/95/660/449/" title="Warren Ng on LinkedIn">
+      <i class='icon icon-social-linkedin'></i>
+      <span class="label">LinkedIn</span>
+    </a>
+  </li>
 
   <!-- Twitter -->
   <li class="navigation__item">
-    <a href="http://twitter.com/daleanthony" title="@DaleAnthony on Twitter">
+    <a href="http://twitter.com/feedwarren" title="@WarrenNg on Twitter">
       <i class='icon icon-social-twitter'></i>
       <span class="label">Twitter</span>
     </a>
   </li>
 
-    <!-- Dribbble -->
+    <!-- Github -->
     <li class="navigation__item">
-      <a href="http://dribbble.com/daleanthony" title="Dale-Anthony on Dribbble">
-        <i class='icon icon-social-dribbble'></i>
-        <span class="label">Dribbble</span>
+      <a href="http://github.com/rawrin" title="Warren Ng on Github">
+        <i class='icon icon-social-github'></i>
+        <span class="label">Github</span>
       </a>
     </li>
 
     <!-- Email -->
     <li class="navigation__item">
-      <a href="mailto:hello@daleanthony.com" title="Email hello@daleanthony.com">
+      <a href="mailto:warrenng23@gmail.com" title="Email warrenng23@gmail.com">
         <i class='icon icon-mail'></i>
         <span class="label">Email</span>
       </a>
