--- a/content/themes/Uno-master/partials/side-panel.hbs
+++ b/content/themes/Uno-master/partials/side-panel.hbs
@@ -29,6 +29,6 @@
 
     </div>
 
-    <div class="panel-cover--overlay cover-blue"></div>
+    <div class="panel-cover--overlay cover-slate"></div>
   </div>
 </header>
