Fixed minor issue with LinkedIn link.

--- a/content/themes/Uno-master/partials/social.hbs
+++ b/content/themes/Uno-master/partials/social.hbs
@@ -49,7 +49,7 @@ classes that you can use:
 
   <!-- LinkedIn -->
   <li class="navigation__item">
-    <a href="www.linkedin.com/pub/warren-ng/95/660/449/" title="Warren Ng on LinkedIn">
+    <a href="http://linkedin.com/pub/warren-ng/95/660/449/" title="Warren Ng on LinkedIn">
       <i class='icon icon-social-linkedin'></i>
       <span class="label">LinkedIn</span>
     </a>
