Change font back, attempt to remove blog button.

--- a/content/themes/Uno-master/assets/css/uno.css
+++ b/content/themes/Uno-master/assets/css/uno.css
@@ -1183,7 +1183,7 @@ hr {
   color: #FFF; }
 
 .panel-subtitle {
-  font-family: "Open Sans", serif;
+  font-family: "Roboto Slab", serif;
   font-size: 1.2em;
   font-weight: lighter;
   letter-spacing: 3px;
