--- a/content/themes/Uno-master/partials/side-panel.hbs
+++ b/content/themes/Uno-master/partials/side-panel.hbs
@@ -15,11 +15,11 @@
 
         <div class="navigation-wrapper">
 
-          <nav class="cover-navigation cover-navigation--primary">
+          <!-- <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
               <li class="navigation__item"><a href="/#blog" title="link to {{@blog.title}} blog" class="blog-button">Blog</a></li>
             </ul>
-          </nav>
+          </nav> -->
 
           {{> social}}
 
