Re-align social icons after removing blog icon

--- a/content/themes/Uno-master/partials/side-panel.hbs
+++ b/content/themes/Uno-master/partials/side-panel.hbs
@@ -13,7 +13,7 @@
         <p class="panel-cover__description">{{@blog.description}}</p>
         <hr class="panel-cover__divider panel-cover__divider--secondary" />
 
-        <div class="navigation-wrapper">
+<!--         <div class="navigation-wrapper">
 
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
@@ -23,7 +23,7 @@
 
           {{> social}}
 
-        </div>
+        </div> -->
 
       </div>
 
