--- a/content/themes/Uno-master/partials/side-panel.hbs
+++ b/content/themes/Uno-master/partials/side-panel.hbs
@@ -13,17 +13,17 @@
         <p class="panel-cover__description">{{@blog.description}}</p>
         <hr class="panel-cover__divider panel-cover__divider--secondary" />
 
-<!--         <div class="navigation-wrapper">
-
-          <!-- <nav class="cover-navigation cover-navigation--primary">
+        <div class="navigation-wrapper">
+        {{> social}}
+<!--           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
               <li class="navigation__item"><a href="/#blog" title="link to {{@blog.title}} blog" class="blog-button">Blog</a></li>
             </ul>
-          </nav> -->
+          </nav>
 
-          {{> social}}
+          {{> social}} -->
 
-        </div> -->
+        </div>
 
       </div>
 
