Changed social icons to open new window and changed order

--- a/content/themes/Uno-master/partials/social.hbs
+++ b/content/themes/Uno-master/partials/social.hbs
@@ -49,27 +49,27 @@ classes that you can use:
 
   <!-- LinkedIn -->
   <li class="navigation__item">
-    <a href="http://linkedin.com/pub/warren-ng/95/660/449/" title="Warren Ng on LinkedIn">
+    <a href="http://linkedin.com/pub/warren-ng/95/660/449/" title="Warren Ng on LinkedIn" target="_blank">
       <i class='icon icon-social-linkedin'></i>
       <span class="label">LinkedIn</span>
     </a>
   </li>
 
-  <!-- Twitter -->
-  <li class="navigation__item">
-    <a href="http://twitter.com/feedwarren" title="@WarrenNg on Twitter">
-      <i class='icon icon-social-twitter'></i>
-      <span class="label">Twitter</span>
-    </a>
-  </li>
-
     <!-- Github -->
     <li class="navigation__item">
-      <a href="http://github.com/rawrin" title="Warren Ng on Github">
+      <a href="http://github.com/rawrin" title="Warren Ng on Github" target="_blank">
         <i class='icon icon-social-github'></i>
         <span class="label">Github</span>
       </a>
     </li>
+
+  <!-- Twitter -->
+  <li class="navigation__item">
+    <a href="http://twitter.com/feedwarren" title="@WarrenNg on Twitter" target="_blank">
+      <i class='icon icon-social-twitter'></i>
+      <span class="label">Twitter</span>
+    </a>
+  </li>
 
     <!-- Email -->
     <li class="navigation__item">
